# anchor-gen

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
crates/anchor-gen/: Cargo.toml
crates/anchor-gen/src/: lib.rs
crates/anchor-generate-cpi-crate/: Cargo.toml
crates/anchor-generate-cpi-crate/src/: lib.rs
crates/anchor-generate-cpi-interface/: Cargo.toml
crates/anchor-generate-cpi-interface/src/: lib.rs
crates/anchor-idl/: Cargo.toml  README.md
crates/anchor-idl/src/: account.rs  decode.rs  instruction.rs  lib.rs  program.rs  state.rs  typedef.rs
examples/drift/: Cargo.toml  README.md
examples/drift/src/: lib.rs
examples/govern-cpi/: Cargo.toml  README.md
examples/marinade-cpi/: Cargo.toml
examples/whirlpools/: Cargo.toml  README.md
examples/whirlpools/src/: lib.rs
